--- a/index.html
+++ b/index.html
@@ -2,35 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pharmacy POS - Welcome</title>
+  <title>Modern Dental Clinic - Pharmacy POS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Login to Modern Dental Clinic & Pharmacy POS System">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="./assets/favicon.png" type="image/png"> <!-- Replace with actual favicon path -->
   <style>
     body {
-      background: linear-gradient(to right, #e0f7fa, #f8f9fa);
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #d9f5ff, #f8f9fa);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
     }
+
     .welcome-box {
-      background-color: white;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      background: #ffffff;
+      padding: 50px 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.08);
       text-align: center;
+      max-width: 500px;
+      width: 100%;
     }
+
+    .welcome-box img {
+      height: 60px;
+      margin-bottom: 20px;
+    }
+
+    .welcome-box h1 {
+      font-weight: 600;
+      font-size: 1.75rem;
+      margin-bottom: 10px;
+    }
+
+    .welcome-box p {
+      color: #555;
+      font-size: 1rem;
+      margin-bottom: 30px;
+    }
+
     .btn-login {
-      font-size: 1.2rem;
-      padding: 10px 30px;
+      font-size: 1.1rem;
+      padding: 12px 30px;
+      border-radius: 8px;
+    }
+
+    @media (max-width: 576px) {
+      .welcome-box {
+        padding: 30px 20px;
+      }
     }
   </style>
 </head>
 <body>
 
 <div class="welcome-box">
-  <h1 class="mb-3">💊 Welcome to Modern Dental Clinic Management System</h1>
-  <p class="lead mb-4"> Efficiently manage your Dental Clinic and pharmacy's inventory, sales, and reporting in one place.</p>
+  <img src="./assets/logo.png" alt="Clinic Logo"> <!-- Replace with your logo -->
+  <h1>🦷 Welcome to Modern Dental Clinic </h1>
+  <p class="lead">Manage appointments, prescriptions, inventory, and sales — all in one platform.</p>
   <a href="login.php" class="btn btn-primary btn-login">Login to System</a>
 </div>
 
